# wrench

./: .pre-commit-config.yaml  .releaserc  LICENSE  README.md  completion.sh  easy-install.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  easy-install.md  questions-about-using-wrench.md
.github/workflows/: ci.yml  easy-install.yml  linters.yml
docs/: branch_details.md  commands_and_usage.md  contribution_guidelines.md  installation.md  release_policy.md  releasing_saashq_apps.md  wrench_custom_cmd.md  wrench_usage.md
wrench/: __init__.py  app.py  cli.py  exceptions.py  wrench.py
wrench/commands/: __init__.py  config.py  git.py  install.py  make.py  setup.py  update.py  utils.py
wrench/config/: __init__.py  common_site_config.py  lets_encrypt.py  nginx.py  procfile.py  production_setup.py  redis.py  site_config.py  supervisor.py  systemd.py
wrench/config/templates/: Procfile  nginx.conf  saashq_sudoers  supervisor.conf  wrench_manager_nginx.conf
wrench/config/templates/systemd/: saashq-wrench-node-socketio.service  saashq-wrench-redis-cache.service  saashq-wrench-redis-queue.service  saashq-wrench.target  (+7 more)
wrench/patches/: __init__.py  patches.txt
wrench/patches/v5/: fix_backup_cronjob.py  fix_user_permissions.py  set_live_reload_config.py  update_archived_sites.py
wrench/playbooks/: README.md  create_user.yml  macosx.yml  site.yml
wrench/tests/: test_base.py  test_init.py  test_setup_production.py  test_utils.py
wrench/utils/: __init__.py  app.py  cli.py  render.py  system.py  translation.py  wrench.py
(+7 files in other folders)
